# Discord-Role-Manager

./: .env.example  .gitignore  .project  README.md  Rolm_Role_Manager.bat  birthday.json  birthday.py  fetch_avatars.py  iDiscord.py  last_update.json  main.py  pyproject.toml  role_handler.py  roles.json  run.bat  run.ps1  update.py  users.py
.github/workflows/: test.yml
dashboard/: README.md  discord_api.py  main.py
dashboard/static/css/: style.css
dashboard/static/js/: app.js  default_emojis.js
dashboard/templates/: index.html
tests/: conftest.py  test_birthday.py  test_dashboard_helpers.py  test_discord_api.py  test_fetch_avatars.py  test_idiscord.py  test_logger.py  test_main.py  test_role_handler.py  test_update.py  test_users.py
utils/: logger.py
