[project]
name = "Rolm_Discord_Bot"
version = "1.0.45"
description = ""
authors = [
    {name = "Geoffery10", email = "powellgeoffery@gmail.com"},
]
dependencies = [
    "discord.py==2.2.2",
    "asyncio>=3.4.3",
    "aiosignal==1.3.1",
    "async-timeout==4.0.2",
    "aiohttp>=3.8.4",
    "frozenlist>=1.3.3",
    "discord==2.2.2",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
run = "python -m main"
test = "pytest"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
