[project]
name = "Rolm_Discord_Bot"
version = "1.0.45"
description = ""
authors = [
    {name = "Geoffery10", email = "powellgeoffery@gmail.com"},
]
dependencies = [
    "discord.py>=2.7.1",
    "asyncio>=3.4.3",
    "aiosignal>=1.4.0",
    "async-timeout>=5.0.1",
    "aiohttp>=3.14.0",
    "multidict>=6.7.1",
    "frozenlist>=1.8.0",
    "python-dotenv>=1.2.2",
    "colorama>=0.4.6",
    "yarl>=1.24.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.0.0",
    "httpx>=0.24.0",
    "attrs>=26.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
run = "python -m main"
test = "pytest"
dashboard = "python -m dashboard.main"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]
